@@ -1,8 +1,8 @@
 package br.com.maratona.dev.resource;
 
-import java.util.ArrayList;
 import java.util.List;
 
+import javax.inject.Inject;
 import javax.ws.rs.DELETE;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
@@ -16,91 +16,82 @@ import javax.ws.rs.core.Response.Status;
 
 @Path(value = "/inscricao")
 public class InscricaoMaratonaResource {
-	
-	List<Pessoa> pessoas = new ArrayList<Pessoa>();
-	
-	public void init() {
-		pessoas.add(new Pessoa("Kleber", 1));
-		pessoas.add(new Pessoa("Marcus", 2));
-		pessoas.add(new Pessoa("Stag", 3));
-	}
+
+	@Inject
+	private InscricaoHelper inscricaoHelper;
 
 	@GET
 	@Produces(MediaType.APPLICATION_JSON)
 	@Path(value = "/lista/inscritos")
 	public List<Pessoa> matricula() {
-		init();
-		return pessoas;
+		inscricaoHelper.init();
+		return inscricaoHelper.getPessoas();
 	}
-	
+
 	@GET
 	@Produces(MediaType.APPLICATION_JSON)
 	@Path(value = "/lista/inscritos/{id}")
 	public Response matriculaPorId(@PathParam("id") String id) {
-		init();
-		
-		for (Pessoa indice : pessoas) {
-			if (indice.getMatricula().equals(new Integer(id))) {
-				return Response.status(Status.OK).entity(indice).build();
+
+		try {
+			Pessoa objetoRetorno = inscricaoHelper.findPessoa(Integer.valueOf(id));
+
+			if (objetoRetorno != null) {
+				return Response.status(Status.OK).entity(objetoRetorno).build();
 			}
+
+		} catch (NumberFormatException e) {
+			Response.status(Status.INTERNAL_SERVER_ERROR).entity("Erro na solicitação").build();
+		} catch (NullPointerException e) {
+			Response.status(Status.INTERNAL_SERVER_ERROR).entity("Erro na solicitação... Null").build();
 		}
-		
+
 		return Response.status(Status.NO_CONTENT).build();
 	}
-	
+
 	@DELETE
 	@Produces(MediaType.APPLICATION_JSON)
 	@Path(value = "/remover/inscritos/{id}")
 	public Response remover(@PathParam("id") String id) {
-		init();
-		
-		Pessoa remove = null;
-		for (Pessoa indice : pessoas) {
-			if (indice.getMatricula().equals(new Integer(id))) {
-				remove = indice;
-			}
-		}
-		if (pessoas.remove(remove)) {
+
+		Pessoa remove = inscricaoHelper.findPessoa(Integer.valueOf(id));
+
+		if (inscricaoHelper.getPessoas().remove(remove)) {
 			return Response.status(Status.OK).entity("Removido com Sucesso!").build();
 		}
+
 		return Response.status(Status.NO_CONTENT).build();
 	}
-	
+
 	@PUT
 	@Produces(MediaType.APPLICATION_JSON)
 	@Path(value = "/alterar/inscritos/{id}")
 	public Response alterar(@PathParam("id") String id, Pessoa pessoa) {
-		init();
-		
+		inscricaoHelper.init();
+
 		Pessoa novaPessoa = new Pessoa();
-		novaPessoa.setMatricula(new Integer(id));
+		novaPessoa.setMatricula( Integer.valueOf(id));
 		novaPessoa.setNome(pessoa.getNome());
-		
-		Pessoa atualPessoa = null;
-		for (Pessoa indice : pessoas) {
-			if (indice.getMatricula().equals(new Integer(id))) {
-				atualPessoa = indice;
-			}
-		}
-		
-		if (pessoas.contains(atualPessoa)) {
-			int index = pessoas.indexOf(atualPessoa);
-			pessoas.set(index, novaPessoa);
+
+		Pessoa atualPessoa = inscricaoHelper.findPessoa(Integer.valueOf(id));
+
+		if (inscricaoHelper.getPessoas().contains(atualPessoa)) {
+			int index = inscricaoHelper.getPessoas().indexOf(atualPessoa);
+			inscricaoHelper.getPessoas().set(index, novaPessoa);
 			return Response.status(Status.OK).entity(novaPessoa).build();
 		}
 		return Response.status(Status.NO_CONTENT).build();
 	}
-	
+
 	@POST
 	@Produces(MediaType.APPLICATION_JSON)
 	@Path(value = "/incluir/inscritos/")
-	public Response incluir(Pessoa pessoa) {
-		init();
-		pessoa.setMatricula(pessoas.size() + 1);
-		pessoas.add(pessoa);
-		
+	public Response cadastrar(Pessoa pessoa) {
+		inscricaoHelper.init();
+		pessoa.setMatricula(inscricaoHelper.getPessoas().size() + 1);
+		inscricaoHelper.getPessoas().add(pessoa);
+
 		return Response.status(Status.CREATED).entity(pessoa).build();
 	}
-	
-	
+
 }
